--- a/bondCrunchersUI/MainWindow.xaml
+++ b/bondCrunchersUI/MainWindow.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:bondCrunchersUI"
         mc:Ignorable="d"
-        Title="EBond Trader" Height="621.053" Width="1125.974" Loaded="Setup" ResizeMode="NoResize" FontSize="13.333">
+        Title="EBond Trader" Height="621.053" Width="1221.974" Loaded="Setup" ResizeMode="NoResize" FontSize="13.333">
     <Canvas>
         <Label x:Name="label" Content="Bond Management" Canvas.Left="7" Canvas.Top="3" FontSize="18"/>
-        <TabControl x:Name="tabControl" Height="552" Canvas.Top="39" Width="1120">
+        <TabControl x:Name="tabControl" Height="552" Canvas.Top="39" Width="1216">
             <TabItem Header="Bond Listing">
                 <Canvas>
-                    <DataGrid x:Name="bondData" Height="419" Width="1110" HorizontalContentAlignment="Center" SelectionChanged="ChangeSelection" Canvas.Top="63">
+                    <DataGrid x:Name="bondData" Height="419" Width="1206" HorizontalContentAlignment="Center" SelectionChanged="ChangeSelection" Canvas.Top="63" MouseDoubleClick="DoubleClickTrade">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="ID" Binding="{Binding id}" IsReadOnly="True" />
                             <DataGridTextColumn Header="ISIN" Binding="{Binding isin}" IsReadOnly="True" />
@@ -33,14 +33,13 @@
                         </DataGrid.Columns>
 
                     </DataGrid>
-                    <Button x:Name="btnLoad" Content="Load Bonds" Canvas.Left="843" Canvas.Top="487" Width="84" Click="LoadBonds" />
-                    <Button x:Name="btnBook" Content="Book Trade" Canvas.Left="1020" Canvas.Top="487" Width="75" Click="BookTrade"/>
+                    <Button x:Name="btnLoad" Content="Load Bonds" Canvas.Left="933" Canvas.Top="487" Width="84" Click="LoadBonds" />
+                    <Button x:Name="btnBook" Content="Book Trade" Canvas.Left="1110" Canvas.Top="487" Width="75" Click="BookTrade"/>
                     <TextBox x:Name="txtSearch" Height="23" Canvas.Left="130" TextWrapping="Wrap" Canvas.Top="34" Width="120" TextChanged="SearchChanged"/>
                     <Button x:Name="btnTestConnection" Content="Test Connection" Canvas.Left="483" Canvas.Top="4" Width="107" Click="TestConnection"/>
                     <Label x:Name="label1" Content="Search Bond" Canvas.Left="2" Canvas.Top="32" FontWeight="Bold"/>
                     <Label x:Name="label2" Content="ISIN:" Canvas.Left="97" Canvas.Top="32"/>
                     <ComboBox x:Name="cmbCoupon" Canvas.Left="350" Canvas.Top="34" Width="120" DropDownClosed="CouponPeriodChanged">
-                        <ComboBoxItem Content="Any" HorizontalAlignment="Left" Width="118"/>
                         <ComboBoxItem Content="Annual" HorizontalAlignment="Left" Width="118"/>
                         <ComboBoxItem Content="Semi-Annual" HorizontalAlignment="Left" Width="118"/>
                         <ComboBoxItem Content="Quaterly" HorizontalAlignment="Left" Width="118"/>
@@ -52,14 +51,14 @@
                     <Label x:Name="label5" Content="Connection" Canvas.Top="-1" FontWeight="Bold"/>
                     <Label x:Name="label6" Content="http://" Canvas.Left="86" Canvas.Top="-1"/>
                     <TextBox x:Name="txtIP" Height="23" Canvas.Left="130" TextWrapping="Wrap" Canvas.Top="4" Width="340" TextChanged="IPChanged" Text="192.168.66.1:8080"/>
-                    <Button x:Name="txtClear" Content="Clear Bonds" Canvas.Left="932" Canvas.Top="487" Width="83" Click="ClearBonds"/>
-                    <Label x:Name="label7" Content="Ratings Search" Canvas.Left="825" Canvas.Top="-1"/>
-                    <ComboBox x:Name="comboBox" Canvas.Left="760" Canvas.Top="32" Width="120">
+                    <Button x:Name="txtClear" Content="Clear Bonds" Canvas.Left="1022" Canvas.Top="487" Width="83" Click="ClearBonds"/>
+                    <Label x:Name="label7" Content="Ratings Search" Canvas.Left="763" Canvas.Top="-1"/>
+                    <ComboBox x:Name="cmbRating" Canvas.Left="698" Canvas.Top="32" Width="120" DropDownClosed="PopulateRatings">
                         <ComboBoxItem Content="Moody's" HorizontalAlignment="Left" Width="118"/>
                         <ComboBoxItem Content="SnP" HorizontalAlignment="Left" Width="118"/>
                         <ComboBoxItem Content="Fitch" HorizontalAlignment="Left" Width="118"/>
                     </ComboBox>
-                    <ComboBox x:Name="comboBox1" Canvas.Left="887" Canvas.Top="32" Width="120"/>
+                    <ComboBox x:Name="cmbRatingSymbol" Canvas.Left="825" Canvas.Top="32" Width="120" DropDownClosed="SearchRatingChanged"/>
 
                 </Canvas>
             </TabItem>
