--- a/bondCrunchersUI/BookTradeWindow.xaml
+++ b/bondCrunchersUI/BookTradeWindow.xaml
@@ -5,30 +5,33 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:bondCrunchersUI"
         mc:Ignorable="d"
-        Title="Book Trade" Height="313.687" Width="345.113" ResizeMode="NoResize" Loaded="SetupTradeBooking">
+        Title="Book Trade" Height="356.687" Width="345.113" ResizeMode="NoResize" Loaded="SetupTradeBooking">
     <Canvas>
-        <StackPanel Height="212" Width="119" Canvas.Left="10" Canvas.Top="10">
+        <StackPanel Height="239" Width="119" Canvas.Left="10" Canvas.Top="10">
             <Label x:Name="label1" Content="ISIN:" HorizontalContentAlignment="Center"/>
             <Label x:Name="label2" Content="Trade Date:" HorizontalContentAlignment="Center"/>
-            <Label x:Name="label8" Content="Settlement Date:" HorizontalContentAlignment="Center"/>
+            <Label x:Name="label8" Content="Settlement Date**:" HorizontalContentAlignment="Center"/>
             <Label x:Name="label5" Content="Trade Yield:" HorizontalContentAlignment="Center"/>
+            <Label x:Name="label9" Content="Quantity" HorizontalAlignment="Center"/>
             <Label x:Name="label3" Content="Clean Price:" HorizontalContentAlignment="Center"/>
             <Label x:Name="label4" Content="Dirty Price:" HorizontalContentAlignment="Center"/>
             <Label x:Name="label6" Content="Accrued Amount:" HorizontalContentAlignment="Center"/>
             <Label x:Name="label7" Content="Settlement Amount:" HorizontalAlignment="Center"/>
         </StackPanel>
-        <StackPanel Height="212" Canvas.Left="134" Width="178" Canvas.Top="10">
+        <StackPanel Height="239" Canvas.Left="134" Width="178" Canvas.Top="10">
             <ComboBox x:Name="cmbISIN" Margin="1.5" DropDownClosed="ChangeBond" />
             <DatePicker x:Name="dtpTrade" Margin="1.5" />
-            <DatePicker x:Name="dtpSettlement" Margin="1.5" />
+            <DatePicker x:Name="dtpSettlement" Margin="1.5" IsEnabled="False"/>
             <TextBox x:Name="txtTradeYield" Margin="1.5" Height="23" TextWrapping="Wrap" TextChanged="EnableFields"/>
+            <TextBox x:Name="txtQuantity" Margin="1.5" Height="23" TextWrapping="Wrap" TextChanged="QuantityChanged"/>
             <TextBox x:Name="txtCleanPrice" Margin="1.5" Height="23" TextWrapping="Wrap" IsEnabled="False" />
             <TextBox x:Name="txtDirtyPrice" Margin="1.5" Height="23" TextWrapping="Wrap" IsEnabled="False" />
             <TextBox x:Name="txtAccruedAmount" Margin="1.5" Height="23" TextWrapping="Wrap" IsEnabled="False"/>
             <TextBox x:Name="txtSettlemetAmount" Height="23" TextWrapping="Wrap" Margin="1.5" IsEnabled="False"/>
         </StackPanel>
-        <Button x:Name="btnBookTrade" Content="Book Trade" Canvas.Left="55" Canvas.Top="237" Width="75" Click="BookTrade"/>
-        <Button x:Name="btnCancelTrade" Content="Cancel" Canvas.Left="206" Canvas.Top="237" Width="75" Click="CancelTrade"/>
+        <Button x:Name="btnBookTrade" Content="Book Trade" Canvas.Left="55" Canvas.Top="262" Width="75" Click="BookTrade"/>
+        <Button x:Name="btnCancelTrade" Content="Cancel" Canvas.Left="206" Canvas.Top="262" Width="75" Click="CancelTrade"/>
+        <Label x:Name="label" Content="**Settlement Date is T+2" Canvas.Top="293"/>
 
     </Canvas>
 </Window>
