--- a/bondCrunchersUI/MainWindow.xaml
+++ b/bondCrunchersUI/MainWindow.xaml
@@ -34,7 +34,7 @@
 
                     </DataGrid>
                     <Button x:Name="btnLoad" Content="Load Bonds" Canvas.Left="933" Canvas.Top="487" Width="84" Click="LoadBonds" />
-                    <Button x:Name="btnBook" Content="Book Trade" Canvas.Left="1110" Canvas.Top="487" Width="75" Click="BookTrade"/>
+                    <Button x:Name="btnBook" Content="Book Trade" Canvas.Left="1112" Canvas.Top="487" Width="75" Click="BookTrade"/>
                     <TextBox x:Name="txtSearch" Height="23" Canvas.Left="130" TextWrapping="Wrap" Canvas.Top="34" Width="120" TextChanged="SearchChanged"/>
                     <Button x:Name="btnTestConnection" Content="Test Connection" Canvas.Left="483" Canvas.Top="4" Width="107" Click="TestConnection"/>
                     <Label x:Name="label1" Content="Search Bond" Canvas.Left="2" Canvas.Top="32" FontWeight="Bold"/>
@@ -50,7 +50,7 @@
                     <Label x:Name="statusLabel" Content="Status: " Canvas.Left="10" Canvas.Top="487"/>
                     <Label x:Name="label5" Content="Connection" Canvas.Top="-1" FontWeight="Bold"/>
                     <Label x:Name="label6" Content="http://" Canvas.Left="86" Canvas.Top="-1"/>
-                    <TextBox x:Name="txtIP" Height="23" Canvas.Left="130" TextWrapping="Wrap" Canvas.Top="4" Width="340" TextChanged="IPChanged" Text="192.168.66.1:8080"/>
+                    <TextBox x:Name="txtIP" Height="23" Canvas.Left="130" TextWrapping="Wrap" Canvas.Top="4" Width="340" TextChanged="IPChanged" Text="192.168.66.53:8080"/>
                     <Button x:Name="txtClear" Content="Clear Bonds" Canvas.Left="1022" Canvas.Top="487" Width="83" Click="ClearBonds"/>
                     <Label x:Name="label7" Content="Ratings Search" Canvas.Left="763" Canvas.Top="-1"/>
                     <ComboBox x:Name="cmbRating" Canvas.Left="698" Canvas.Top="32" Width="120" DropDownClosed="PopulateRatings">
@@ -59,12 +59,22 @@
                         <ComboBoxItem Content="Fitch" HorizontalAlignment="Left" Width="118"/>
                     </ComboBox>
                     <ComboBox x:Name="cmbRatingSymbol" Canvas.Left="825" Canvas.Top="32" Width="120" DropDownClosed="SearchRatingChanged"/>
+                    <ComboBox x:Name="cmbYield" Canvas.Left="985" Canvas.Top="32" Width="120" DropDownClosed="YieldChanged">
+                        <ComboBoxItem Content="0-1%" HorizontalAlignment="Left" Width="118"/>
+                        <ComboBoxItem Content="1-2%" HorizontalAlignment="Left" Width="118"/>
+                        <ComboBoxItem Content="2-3%" HorizontalAlignment="Left" Width="118"/>
+                        <ComboBoxItem Content="3-4%" HorizontalAlignment="Left" Width="118"/>
+                        <ComboBoxItem Content="4-5%" HorizontalAlignment="Left" Width="118"/>
+                        <ComboBoxItem Content="5-6%" HorizontalAlignment="Left" Width="118"/>
+                        <ComboBoxItem Content="6-7%" HorizontalAlignment="Left" Width="118"/>
+                    </ComboBox>
+                    <Label x:Name="label8" Content="Yield" Canvas.Left="1024"/>
 
                 </Canvas>
             </TabItem>
             <TabItem Header="Transaction History">
                 <Canvas>
-                    <DataGrid x:Name="transactionHistory" Height="482" Width="1110">
+                    <DataGrid x:Name="transactionHistory" Height="482" Width="1206">
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="OrderID" Binding="{Binding orderId}" IsReadOnly="True"/>
                             <DataGridTextColumn Header="Time Stamp" Binding="{Binding timeStampLog}" IsReadOnly="True"/>
@@ -72,13 +82,14 @@
                             <DataGridTextColumn Header="Trade Date" Binding="{Binding tradeDateShort}" IsReadOnly="True"/>
                             <DataGridTextColumn Header="Settlement Date" Binding="{Binding settlementDateShort}" IsReadOnly="True"/>
                             <DataGridTextColumn Header="Clean Price" Binding="{Binding cleanPrice}" IsReadOnly="True"/>
-                            <DataGridTextColumn Header="Accrued Amount" Binding="{Binding accruedAmount}" IsReadOnly="True"/>
                             <DataGridTextColumn Header="Dirty Price" Binding="{Binding dirtyPrice}" IsReadOnly="True"/>
                             <DataGridTextColumn Header="Trade Yield" Binding="{Binding tradeYield}" IsReadOnly="True"/>
+                            <DataGridTextColumn Header="Quantity" Binding="{Binding quantity}" IsReadOnly="True"/>
+                            <DataGridTextColumn Header="Accrued Amount" Binding="{Binding accruedAmount}" IsReadOnly="True"/>
                             <DataGridTextColumn Header="Settlement Amount" Binding="{Binding settlementAmount}" IsReadOnly="True"/>
                         </DataGrid.Columns>
                     </DataGrid>
-                    <Button x:Name="btnRefreshTransaction" Content="Refresh" Canvas.Left="1020" Canvas.Top="488" Width="75" Click="RefreshTransaction"/>
+                    <Button x:Name="btnRefreshTransaction" Content="Refresh" Canvas.Left="1110" Canvas.Top="488" Width="75" Click="RefreshTransaction"/>
 
                 </Canvas>
             </TabItem>
