--- a/bondCrunchersUI/BookTradeWindow.xaml
+++ b/bondCrunchersUI/BookTradeWindow.xaml
@@ -5,12 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:bondCrunchersUI"
         mc:Ignorable="d"
-        Title="Book Trade" Height="356.687" Width="341.113" ResizeMode="NoResize" Loaded="SetupTradeBooking">
+        Title="Book Trade" Height="361.687" Width="341.113" ResizeMode="NoResize" Loaded="SetupTradeBooking">
     <Canvas>
-        <StackPanel Height="239" Width="119" Canvas.Left="10" Canvas.Top="10">
+        <StackPanel Height="277" Width="119" Canvas.Left="10" Canvas.Top="10">
+            <Label x:Name="label11" Content="CustomerID:" HorizontalContentAlignment="Center"/>
             <Label x:Name="label1" Content="ISIN:" HorizontalContentAlignment="Center"/>
             <Label x:Name="label2" Content="Trade Date:" HorizontalContentAlignment="Center"/>
-            <Label x:Name="label8" Content="Settlement Date**:" HorizontalContentAlignment="Center"/>
+            <Label x:Name="label8" Content="Settlement Date**:" HorizontalContentAlignment="Center" Visibility="Hidden"/>
             <Label x:Name="label5" Content="Trade Yield:" HorizontalContentAlignment="Center"/>
             <Label x:Name="label9" Content="Quantity" HorizontalAlignment="Center"/>
             <Label x:Name="label3" Content="Clean Price:" HorizontalContentAlignment="Center"/>
@@ -18,10 +19,11 @@
             <Label x:Name="label6" Content="Accrued Amount:" HorizontalContentAlignment="Center"/>
             <Label x:Name="label7" Content="Settlement Amount:" HorizontalAlignment="Center"/>
         </StackPanel>
-        <StackPanel Height="239" Canvas.Left="134" Width="178" Canvas.Top="10">
+        <StackPanel Height="277" Canvas.Left="134" Width="178" Canvas.Top="10">
+            <TextBox x:Name="txtCustomer" Margin="1.5"/>
             <ComboBox x:Name="cmbISIN" Margin="1.5" DropDownClosed="ChangeBond" />
             <DatePicker x:Name="dtpTrade" Margin="1.5" />
-            <DatePicker x:Name="dtpSettlement" Margin="1.5" IsEnabled="False"/>
+            <DatePicker x:Name="dtpSettlement" Margin="1.5" IsEnabled="False" Visibility="Hidden"/>
             <TextBox x:Name="txtTradeYield" Margin="2,1.5" Height="24" TextWrapping="Wrap" TextChanged="EnableFields"/>
             <TextBox x:Name="txtQuantity" Margin="1.5" Height="23" TextWrapping="Wrap" TextChanged="QuantityChanged"/>
             <TextBox x:Name="txtCleanPrice" Margin="2,1.5,0,1.5" Height="22" TextWrapping="Wrap" HorizontalAlignment="Left" Width="83" />
@@ -29,10 +31,10 @@
             <TextBox x:Name="txtAccruedAmount" Margin="1.5" Height="23" TextWrapping="Wrap" IsEnabled="False"/>
             <TextBox x:Name="txtSettlemetAmount" Height="23" TextWrapping="Wrap" Margin="1.5" IsEnabled="False"/>
         </StackPanel>
-        <Button x:Name="btnBookTrade" Content="Book Trade" Canvas.Left="55" Canvas.Top="262" Width="75" Click="BookTrade"/>
-        <Button x:Name="btnCancelTrade" Content="Cancel" Canvas.Left="206" Canvas.Top="262" Width="75" Click="CancelTrade"/>
-        <Label x:Name="label" Content="**Settlement Date is T+2" Canvas.Top="293"/>
-        <Button x:Name="btnYield" Content="Calculate Yield" Canvas.Left="220" Canvas.Top="144" Width="92" Click="YieldCalculation"/>
+        <Button x:Name="btnBookTrade" Content="Book Trade" Canvas.Left="55" Canvas.Top="286" Width="75" Click="BookTrade"/>
+        <Button x:Name="btnCancelTrade" Content="Cancel" Canvas.Left="206" Canvas.Top="286" Width="75" Click="CancelTrade"/>
+        <Label x:Name="label" Content="**Settlement Date is Trade Date+2" Canvas.Top="88" Canvas.Left="69"/>
+        <Button x:Name="btnYield" Content="Calculate Yield" Canvas.Left="220" Canvas.Top="168" Width="92" Click="YieldCalculation"/>
 
     </Canvas>
 </Window>
