--- a/bondCrunchersUI/MainWindow.xaml
+++ b/bondCrunchersUI/MainWindow.xaml
@@ -5,18 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:bondCrunchersUI"
         mc:Ignorable="d"
-        Title="EBond Trader" Height="621.053" Width="791.474" Loaded="Setup" ResizeMode="NoResize">
+        Title="EBond Trader" Height="621.053" Width="1125.974" Loaded="Setup" ResizeMode="NoResize" FontSize="13.333">
     <Canvas>
-        <Label x:Name="label" Content="Bond Management" Canvas.Left="7" Canvas.Top="3" FontSize="16"/>
-        <TabControl x:Name="tabControl" Height="552" Canvas.Top="39" Width="783">
+        <Label x:Name="label" Content="Bond Management" Canvas.Left="7" Canvas.Top="3" FontSize="18"/>
+        <TabControl x:Name="tabControl" Height="552" Canvas.Top="39" Width="1120">
             <TabItem Header="Bond Listing">
                 <Canvas>
-                    <DataGrid x:Name="bondData" Height="482" Width="773" HorizontalContentAlignment="Center" SelectionChanged="ChangeSelection">
+                    <DataGrid x:Name="bondData" Height="438" Width="1110" HorizontalContentAlignment="Center" SelectionChanged="ChangeSelection" Canvas.Top="44">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="ID" Binding="{Binding id}" IsReadOnly="True"/>
+                            <DataGridTextColumn Header="ID" Binding="{Binding id}" IsReadOnly="True" />
                             <DataGridTextColumn Header="ISIN" Binding="{Binding isin}" IsReadOnly="True" />
-                            <DataGridTextColumn Header="Maturity Date" Binding="{Binding maturityDate}" IsReadOnly="True" />
-                            <DataGridTextColumn Header="Start Date" Binding="{Binding startDate}" IsReadOnly="True" />
+                            <DataGridTextColumn Header="Issuer Name" Binding="{Binding issuerName}" IsReadOnly="True"/>
+                            <DataGridTextColumn Header="Maturity Date" Binding="{Binding maturityShortDate}" IsReadOnly="True" />
+                            <DataGridTextColumn Header="Start Date" Binding="{Binding startShortDate}" IsReadOnly="True" />
                             <DataGridTextColumn Header="Bond Duration" Binding="{Binding bondDuration}" IsReadOnly="True"/>
                             <DataGridTextColumn Header="Coupon Rate" Binding="{Binding couponRate}" IsReadOnly="True" />
                             <DataGridTextColumn Header="Coupon Period" Binding="{Binding couponPeriod}" IsReadOnly="True"/>
@@ -25,33 +26,44 @@
                             <DataGridTextColumn Header="Last" Binding="{Binding lastPrice}" IsReadOnly="True" />
                             <DataGridTextColumn Header="Change" Binding="{Binding changePrice}" IsReadOnly="True"/>
                             <DataGridTextColumn Header="Yield" Binding="{Binding yield}" IsReadOnly="True" />
-                            
+                            <DataGridTextColumn Header="Fitch" Binding="{Binding fitch}" IsReadOnly="True"/>
+                            <DataGridTextColumn Header="Moody's" Binding="{Binding moodys}" IsReadOnly="True"/>
+                            <DataGridTextColumn Header="SnP" Binding="{Binding snP}" IsReadOnly="True"/>
                         </DataGrid.Columns>
 
                     </DataGrid>
-                    <Button x:Name="btnLoad" Content="Load Bonds" Canvas.Left="602" Canvas.Top="490" Width="75" Click="LoadBonds" />
-                    <Button x:Name="btnBook" Content="Book Trade" Canvas.Left="686" Canvas.Top="490" Width="75" Click="BookTrade"/>
+                    <Button x:Name="btnLoad" Content="Load Bonds" Canvas.Left="940" Canvas.Top="487" Width="75" Click="LoadBonds" />
+                    <Button x:Name="btnBook" Content="Book Trade" Canvas.Left="1020" Canvas.Top="487" Width="75" Click="BookTrade"/>
+                    <TextBox x:Name="txtSearch" Height="23" Canvas.Left="130" TextWrapping="Wrap" Canvas.Top="10" Width="120" TextChanged="SearchChanged"/>
+                    <Button x:Name="btnSearch" Content="Search" Canvas.Left="1020" Canvas.Top="10" Width="75" Click="Search"/>
+                    <Label x:Name="label1" Content="Search Bond" Canvas.Left="2" Canvas.Top="8" FontWeight="Bold"/>
+                    <Label x:Name="label2" Content="ISIN:" Canvas.Left="97" Canvas.Top="8"/>
+                    <ComboBox x:Name="cmbCoupon" Canvas.Left="350" Canvas.Top="10" Width="120" DropDownClosed="CouponPeriodChanged">
+                        <ComboBoxItem Content="Annual" HorizontalAlignment="Left" Width="118"/>
+                        <ComboBoxItem Content="Semi-Annual" HorizontalAlignment="Left" Width="118"/>
+                        <ComboBoxItem Content="Quaterly" HorizontalAlignment="Left" Width="118"/>
+                    </ComboBox>
+                    <Label x:Name="label3" Content="Coupon Period:" Canvas.Left="250" Canvas.Top="8"/>
 
                 </Canvas>
             </TabItem>
             <TabItem Header="Transaction History">
                 <Canvas>
-                    <DataGrid x:Name="transactionHistory" Height="482" Width="773">
+                    <DataGrid x:Name="transactionHistory" Height="482" Width="1110">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="OrderID" Binding="{Binding orderId}"/>
-                            <DataGridTextColumn Header="Time Stamp" Binding="{Binding timeStampLog}"/>
-                            <DataGridTextColumn Header="ISIN" Binding="{Binding isin}"/>
-                            <DataGridTextColumn Header="Trade Date" Binding="{Binding tradeDateShort}"/>
-                            <DataGridTextColumn Header="Settlement Date" Binding="{Binding settlementDateShort}" />
-                            <DataGridTextColumn Header="Clean Price" Binding="{Binding cleanPrice}" />
-                            <DataGridTextColumn Header="Accrued Amount" Binding="{Binding accruedAmount}"/>
-                            <DataGridTextColumn Header="Dirty Price" Binding="{Binding dirtyPrice}" />
-                            <DataGridTextColumn Header="Trade Yield" Binding="{Binding tradeYield}" />
-                            <DataGridTextColumn Header="Settlement Amount" Binding="{Binding settlementAmount}" />
-
+                            <DataGridTextColumn Header="OrderID" Binding="{Binding orderId}" IsReadOnly="True"/>
+                            <DataGridTextColumn Header="Time Stamp" Binding="{Binding timeStampLog}" IsReadOnly="True"/>
+                            <DataGridTextColumn Header="ISIN" Binding="{Binding isin}" IsReadOnly="True"/>
+                            <DataGridTextColumn Header="Trade Date" Binding="{Binding tradeDateShort}" IsReadOnly="True"/>
+                            <DataGridTextColumn Header="Settlement Date" Binding="{Binding settlementDateShort}" IsReadOnly="True"/>
+                            <DataGridTextColumn Header="Clean Price" Binding="{Binding cleanPrice}" IsReadOnly="True"/>
+                            <DataGridTextColumn Header="Accrued Amount" Binding="{Binding accruedAmount}" IsReadOnly="True"/>
+                            <DataGridTextColumn Header="Dirty Price" Binding="{Binding dirtyPrice}" IsReadOnly="True"/>
+                            <DataGridTextColumn Header="Trade Yield" Binding="{Binding tradeYield}" IsReadOnly="True"/>
+                            <DataGridTextColumn Header="Settlement Amount" Binding="{Binding settlementAmount}" IsReadOnly="True"/>
                         </DataGrid.Columns>
                     </DataGrid>
-                    <Button x:Name="btnRefreshTransaction" Content="Refresh" Canvas.Left="686" Canvas.Top="490" Width="75" Click="RefreshTransaction"/>
+                    <Button x:Name="btnRefreshTransaction" Content="Refresh" Canvas.Left="1020" Canvas.Top="488" Width="75" Click="RefreshTransaction"/>
 
                 </Canvas>
             </TabItem>
